# Unpacker

./: .gitignore  AnalyseFileList.sh  AnalyseFolder.bash  BadChannels.txt  CMakeLists.txt  Config.txt  CurrentConfig_S1554.txt  FolderScript.bash  README.md  TestRawSpectra.cxx  Unpacker.cxx  fspc2ch.h  listofAllRuns.txt  unpacker.sh
ExpConfigs/: CurrentConfig_S1554.txt  pipo.txt
UpCore/: CMakeLists.txt  MidasBank.cxx  MidasBank.h  MidasChannelMap.cxx  MidasChannelMap.h  MidasEventFragment.cxx  MidasEventFragment.h  MidasFile.cxx  MidasFile.h  Sharc.cxx  Sharc.h  TMidasEvent.cxx  TMidasEvent.h  Tigress.cxx  Tigress.h  Trifoil.cxx  Trifoil.h  UnpackerOptionManager.cxx  UnpackerOptionManager.h  UserPoint.cxx  UserPoint.h  VUserPoint.cxx  fspc2ch.h
include/: TMidasEvent.h  VUserPoint.h
scripts/: AnalyseList.sh  build_dict.sh  unpacker-cleaner.sh
userConfigs/: Config_S1719-backup.txt
